--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.1",
     "firebase": "^12.2.1",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
