--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.1",
     "firebase": "^12.2.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dnd": "^16.0.1",
