--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,7 @@ JWT_SECRET=your_jwt_secret_key
 
 # CORS
 FRONTEND_URL=http://localhost:5173
+# http://localhost:5173
+BACKEND_URL=https://413cada0aa82.ngrok-free.app
+# http://localhost:5000
+TRUST_PROXY=1
