--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,6 +21,7 @@ JWT_SECRET=your_jwt_secret_key
 # CORS
 FRONTEND_URL=http://localhost:5173
 # http://localhost:5173
-BACKEND_URL=https://413cada0aa82.ngrok-free.app
+BACKEND_URL=http://localhost:5000
+# https://f35767bf02ca.ngrok-free.app
 # http://localhost:5000
 TRUST_PROXY=1
