--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -15,6 +15,7 @@ dist-ssr
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 *.local
 
 # Editor directories and files
