--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 .frontend/.env.production
 .infra/topmeup-ec2-params.json
 .infra/topmeup-ec2.yml
+infra/**
+frontend/.env.production
+infra/topmeup-ec2-params.json
+infra/topmeup-ec2.yml
